--- a/GenericDeviceController/platformio.ini
+++ b/GenericDeviceController/platformio.ini
@@ -15,3 +15,5 @@ framework = arduino
 lib_deps = 
 	knolleary/PubSubClient@^2.8
 	bblanchon/ArduinoJson@^7.4.2
+	adafruit/Adafruit GFX Library@^1.11.3
+	adafruit/Adafruit ST7735 and ST7789 Library@^1.10.0
