--- a/GenericDeviceController/platformio.ini
+++ b/GenericDeviceController/platformio.ini
@@ -17,3 +17,4 @@ lib_deps =
 	bblanchon/ArduinoJson@^6.21.3
 	adafruit/Adafruit GFX Library@^1.11.3
 	adafruit/Adafruit ST7735 and ST7789 Library@^1.10.0
+	olikraus/U8g2_for_Adafruit_GFX@^1.5.0
