Optimize flash usage: simplify startup screen and add build flags

--- a/GenericDeviceController/platformio.ini
+++ b/GenericDeviceController/platformio.ini
@@ -12,6 +12,15 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+; ; 编译优化选项以减少flash占用
+; build_flags = 
+;     -Os                          ; 优化代码大小
+;     -DCORE_DEBUG_LEVEL=0         ; 禁用调试输出
+;     -DARDUINOJSON_ENABLE_PROGMEM=1  ; ArduinoJson使用PROGMEM
+;     -DARDUINOJSON_DECODE_UNICODE=0  ; 禁用Unicode解码
+;     -DU8G2_WITH_CLIP_WINDOW_SUPPORT=0  ; 禁用U8g2剪切窗口
+;     -DU8G2_WITH_FONT_ROTATION=0     ; 禁用字体旋转
+;     -DU8G2_WITH_UNICODE=0           ; 禁用Unicode支持
 lib_deps = 
 	knolleary/PubSubClient@^2.8
 	bblanchon/ArduinoJson@^6.21.3
